add metadata for link previews

--- a/index.html
+++ b/index.html
@@ -2,11 +2,20 @@
 <html>
 
 <head>
+    <meta property="og:title" content="mitvteo">
+    <meta property="og:type" content="website">
+    <!-- TODO: make an icon for this website -->
+    <meta property="og:url" content="https://mitvteo.github.io/">
+    <meta property="og:description" content="projects, experiments, and more">
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
+    
+    <title>mitvteo</title>
+    
     <link rel="stylesheet" href="style.css">
     <script src="main.js" defer></script>
 </head>
