split information into skills category

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
-    
+
     <title>mitvteo</title>
-    
+
     <link rel="stylesheet" href="style.css">
     <script src="main.js" defer></script>
 </head>
@@ -26,18 +26,22 @@
             mitvteo
         </p>
         <div class="caption right slide-in">
-            <h1>about me</h1>
-            <p>i really like programming and i make random things for fun</p>
-            <p>i know a few languages like lua, javascript, html, python, and more</p>
-            <p>i also make music, since im broke i have to use free DAWs</p>
-            <p>i have adhd, autism, and social anxiety</p>
-            <p>mitvteo isnt actually my real name, but just a string of 15 randomly selected letters (mitvteowalozbyt)
-            </p>
-            <p>i play roblox, minecraft, and not much else</p>
+            <h1>skills</h1>
+            <p>i mainly code in lua</p>
+            <p>i can also use javascript and html</p>
+            <p>still learning python</p>
+            <p>i also sometimes make music</p>
         </div>
         <div class="caption left slide-in">
             <h1>projects</h1>
             <p>not much yet...</p>
+        </div>
+        <div class="caption right slide-in">
+            <h1>about me</h1>
+            <p>i really like programming and i make random things for fun</p>
+            <p>i have adhd, autism, and social anxiety</p>
+            <p>mitvteo isnt actually my real name, but just a string of 15 randomly selected letters (mitvteowalozbyt)
+            </p>
         </div>
         <div class="extrapadding caption center slide-in">
             <h1>socials</h1>
