add more social links

--- a/index.html
+++ b/index.html
@@ -54,11 +54,17 @@
                     href="https://www.roblox.com/users/3961296941/profile">Roblox</a>
                 <a onmouseleave="leave('github');" onmouseenter="enter('github');" class="linkrblx"
                     href="https://github.com/mitvteo">GitHub</a>
+                <a onmouseleave="leave('email');" onmouseenter="enter('email');" class="linkemail"
+                    href="mailto:mitvteowalozbyt@gmail.com">E-mail</a>
+                <a onclick="enter('discord')" onmouseleave="leave('discord');" onmouseenter="enter('discord');"
+                    class="linkdiscord">Discord</a>
                 <div class="username">
                     <p class="yt">@mitvteo</p>
                     <p class="twitch">mitvteo</p>
                     <p class="rblx">@Mitvteo_Walozbyt</p>
                     <p class="github">mitvteo</p>
+                    <p class="email">mitvteowalozbyt@gmail.com</p>
+                    <p class="discord">@mitvteo</p>
                 </div>
             </div>
         </div>
