add soundcloud social link

--- a/index.html
+++ b/index.html
@@ -52,10 +52,12 @@
                     href="https://www.twitch.tv/mitvteo">Twitch</a>
                 <a onmouseleave="leave('rblx');" onmouseenter="enter('rblx');" class="linkrblx"
                     href="https://www.roblox.com/users/3961296941/profile">Roblox</a>
-                <a onmouseleave="leave('github');" onmouseenter="enter('github');" class="linkrblx"
+                <a onmouseleave="leave('github');" onmouseenter="enter('github');" class="linkgithub"
                     href="https://github.com/mitvteo">GitHub</a>
                 <a onmouseleave="leave('email');" onmouseenter="enter('email');" class="linkemail"
                     href="mailto:mitvteowalozbyt@gmail.com">E-mail</a>
+                <a onmouseleave="leave('soundcloud');" onmouseenter="enter('soundcloud');" class="linksoundcloud"
+                    href="https://soundcloud.com/mitvteo">SoundCloud</a>
                 <a onclick="enter('discord')" onmouseleave="leave('discord');" onmouseenter="enter('discord');"
                     class="linkdiscord">Discord</a>
                 <div class="username">
@@ -65,6 +67,7 @@
                     <p class="github">mitvteo</p>
                     <p class="email">mitvteowalozbyt@gmail.com</p>
                     <p class="discord">@mitvteo</p>
+                    <p class="soundcloud">mitvteo</p>
                 </div>
             </div>
         </div>
