make text more formal

--- a/index.html
+++ b/index.html
@@ -27,20 +27,19 @@
         </p>
         <div class="caption right slide-in">
             <h1>skills</h1>
-            <p>i mainly code in lua</p>
-            <p>i can also use javascript and html</p>
-            <p>still learning python</p>
-            <p>i also sometimes make music</p>
+            <p>Lua, HTML, and JavaScript programmer</p>
+            <p>Beginner python programmer</p>
+            <p>Sometimes makes music</p>
         </div>
         <div class="caption left slide-in">
             <h1>projects</h1>
-            <p>not much yet...</p>
+            <p>Not much yet...</p>
         </div>
         <div class="caption right slide-in">
             <h1>about me</h1>
-            <p>i really like programming and i make random things for fun</p>
-            <p>i have adhd, autism, and social anxiety</p>
-            <p>mitvteo isnt actually my real name, but just a string of 15 randomly selected letters (mitvteowalozbyt)
+            <p>I really like programming and I make random things for fun</p>
+            <p>I have adhd, autism, and social anxiety</p>
+            <p>"mitvteo" isnt actually my real name, but just a string of 15 randomly selected letters (mitvteowalozbyt)
             </p>
         </div>
         <div class="extrapadding caption center slide-in">
